# projetCuda2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  challenge.md
include/: dataset.h  prefixsum.h
include/helper/: cuda_helper_host.h
src/: dataset.cpp  main.cpp  prefixsum.cpp  prefixsum.cu  prefixsum2.cu
